--- a/src/main/metadata/classes/TriggerVehicleRelTriggerHandlerKR.cls
+++ b/src/main/metadata/classes/TriggerVehicleRelTriggerHandlerKR.cls
@@ -18,15 +18,24 @@ public class TriggerVehicleRelTriggerHandlerKR implements TriggerHandlerIf{
             
            if(trigger.isAfter && (trigger.isInsert))
             {
-              VehicleRelationshipHelperJP.OnAfterInsert(Trigger.new);
+              	VehicleRelationshipHelperJP.OnAfterInsert(Trigger.new);                
             }
-            if(trigger.isAfter && Trigger.isUpdate) {
-              Map<Id,Vehicle_Relationship__c> oldmapVehicleRelship = (Map<Id,Vehicle_Relationship__c>)Trigger.oldmap;
-              VehicleRelationshipHelperJP.OnAfterUpdate(Trigger.new,oldmapVehicleRelship);
+            if(trigger.isAfter && Trigger.isUpdate) 
+            {
+                Map<Id,Vehicle_Relationship__c> oldmapVehicleRelship = (Map<Id,Vehicle_Relationship__c>)Trigger.oldmap;
+                VehicleRelationshipHelperJP.OnAfterUpdate(Trigger.new,oldmapVehicleRelship);
             } 
            if(trigger.isAfter && Trigger.isDelete) {
               VehicleRelationshipHelperJP.OnAfterDelete(Trigger.old);
-            } 
+            }
+        	if(trigger.isBefore && trigger.isInsert)
+            {
+                VehicleRelationshipHelperJP.validateOverlappingVehicleRelationshiponInsert(Trigger.new);
+            }
+        	if(trigger.isBefore && trigger.isUpdate)
+            {
+                VehicleRelationshipHelperJP.validateOverlappingVehicleRelationshiponUpdate(trigger.new,oldmapVehicleRelation);
+            }
     }
 
     public void handleIntegrationTrigger(boolean isInsert,boolean isUpdate,boolean isBefore, boolean isDelete,boolean isAfter){
